# MlNetAttackDetector

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.json.in
MLSnortModule/: README.md  helper  snort.lua
MLSnortModule/src/: CMakeLists.txt
MLSnortModule/src/detector/: CMakeLists.txt  config.cpp  param_default_value.hpp
model/: CMakeLists.txt
model/src/: main.cpp  sample.csv
preprocess/: all_attacks.ipynb  bf_web_xss_sql.ipynb  bf_web_xss_sql_2.ipynb  bot.ipynb  brute_force_ssh_ftp.ipynb  corrmaps.ipynb  ddos_loic_http_udp.ipynb  ddos_loic_udp_hoic.ipynb  dosGESL.ipynb  dos_golden_eye_slowloris.ipynb  dos_http_hulk.ipynb  ftpSshBruteForce.ipynb  infiltration.ipynb  infiltration_2.ipynb  preprocess.ipynb
preprocess/one_model_one_day/: brute_force_ssh_ftp.ipynb  ddos_loic_http_udp.ipynb  dos_golden_eye_slowloris.ipynb  infiltration.ipynb
python/: corrmaps.ipynb  preprocess.ipynb
snort_module/: CMakeLists.txt  X_test.csv  X_train.csv  snort.lua
snort_module/src/: CMakeLists.txt  api_conf.cpp  config.cpp  featuresExtractor.cpp  featuresExtractor.hpp  inspector.cpp  inspector.hpp
snort_module/src/defender/: CMakeLists.txt  config.hpp  featuresExtractor.cpp  featuresExtractor.hpp  inspector.cpp  inspector.hpp  model.cpp  model.hpp  module.cpp  module.hpp  packet_length_collector.cpp  packet_length_collector.hpp  utils.hpp
snort_module/src/detector/: api_conf.cpp  config.hpp  inspector.cpp  inspector.hpp  module.cpp  module.hpp  parameters_name.hpp
snort_module/src/extractor/: features.cpp  features.hpp
src/: main.cpp
